Fix cookie consent buttons
They became invisible with the new color schemes.

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -32,6 +32,12 @@
     color: var(--md-default-fg-color);
 }
 
+/* Cookie consent buttons */
+.md-typeset .md-button {
+    background-color: var(--md-accent-fg-color);
+    color: var(--md-default-bg-color);
+}
+
 /* Restore admonition and details text size */
 .md-typeset :is(.admonition, details) {
     font-size: initial;
